Fix: Align landing page to UI design

--- a/app/globals.css
+++ b/app/globals.css
@@ -71,3 +71,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+.swiper-button-next, .swiper-button-prev  {
+  color: #ffffff !important;
+}
+
+.swiper-pagination-bullet {
+  background: #ffffff !important;
+}
